@@ -1,5 +1,5 @@
 #!/bin/sh
-#	$NetBSD: post-install,v 1.9 2006/07/19 01:35:39 rpaulo Exp $
+#	$NetBSD: post-install,v 1.10 2006/08/27 00:47:08 rpaulo Exp $
 #
 
 # To view the formatted manual page of this file, type:
@@ -645,6 +645,7 @@ EOF
 	    ed $config_directory/master.cf <<EOF || exit 1
 /^tlsmgr[ 	]*fifo[ 	]/
 s/fifo/unix/
+s/[0-9][0-9]*/&?/
 p
 w
 q
